# multi-agent-hybrid-search-with-lancedb

./: .gitignore  README.md  docker-compose.yml
ai-engine/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  README_API.md  app.py  bulk_test_results_20250422_123354.json  deploy.sh  diagnose.py  install_and_test.sh  install_pytest_asyncio.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.sh  setup.py  setup_module.py  startup.txt  web.config
ai-engine/infra/: keyVaultModule.bicep  main.bicep  updateAppSettings.bicep
ai-engine/src/agents/: main.py
ai-engine/src/agents/config/: __init__.py
ai-engine/src/agents/crews/: __init__.py
ai-engine/src/agents/crews/legal_support_agents/: __init__.py  legal_support_agents.py  run.py
ai-engine/src/agents/crews/legal_support_agents/config/: agents.yaml  tasks.yaml
ai-engine/src/agents/rag/: __init__.py  document_store.py
ai-engine/tests/: README.md  conftest.py  test_orchestrator_routing_live.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: chat.tsx  documents.tsx  embeddings.tsx
